--- a/views/index.jade
+++ b/views/index.jade
@@ -26,3 +26,6 @@ block content
           td= money.comment
           td= money.place_id
           td= money.place
+  - else
+    p
+      a(href='/auth') Authrorize
