Fixed template again.

--- a/views/index.jade
+++ b/views/index.jade
@@ -15,7 +15,7 @@ block content
         th Comment
         th Place ID
         th Place
-      each money in moneys.money
+      each money in moneys
         tr
           td= money.id
           td= money.type
