--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-  - if (moneys)
+  - if (moneys && moneys.length > 0)
     table
       tr
         th ID
